versioned_docs/version-5.3/document-extensions/revisions/client-api/operations/conflict-revisions-configuration.mdx
---
title: "Configure Conflict Revisions Operation"
hide_table_of_contents: true
sidebar_label: Configure Conflict Revisions
sidebar_position: 1
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

export const supportedLanguages = ["csharp", "nodejs"];


# Configure Conflict Revisions Operation
<LanguageSwitcher supportedLanguages={supportedLanguages} />
<LanguageContent language="csharp">

<Admonition type="note" title="Note">

* By default, RavenDB creates **revisions for conflict documents** for all collections  
  when conflicts occur and when they are resolved.  

* Use `ConfigureRevisionsForConflictsOperation` to disable the feature or modify the configuration. 

* If you define [default configuration](../../../../studio/database/settings/document-revisions.mdx#define-default-configuration),  
  then these settings will **override** the conflict revisions configuration.  

* If you define any [collection-specific configuration](../../../../studio/database/settings/document-revisions.mdx#define-collection-specific-configuration),  
  then these settings will also **override** the conflict revisions configuration for that collection.  
   * E.g., if the conflict revisions configuration defines that revisions created for conflicting documents will not be purged, 
     but a collection-specific configuration defines an age limit for revisions,  
     revisions for conflicting documents of this collection that exceed this age will be purged.  

* In this page:  
  * [Configure revisions for conflicts - Example](../../../../document-extensions/revisions/client-api/operations/conflict-revisions-configuration.mdx#configure-revisions-for-conflicts---example)
  * [Syntax](../../../../document-extensions/revisions/client-api/operations/conflict-revisions-configuration.mdx#syntax)
  * [Storage consideration](../../../../document-extensions/revisions/client-api/operations/conflict-revisions-configuration.mdx#storage-consideration)
</Admonition>
## Configure revisions for conflicts - Example

<Tabs groupId='languageSyntax'>
<TabItem value="Sync" label="Sync">
<CodeBlock language="csharp">
{`// Define the settings that will apply for conflict revisions (for all collections)
var conflictRevConfig = new RevisionsCollectionConfiguration
{
    PurgeOnDelete = true,
    MinimumRevisionAgeToKeep = new TimeSpan(days: 45, 0, 0, 0)
    
    // With this configuration:
    // ------------------------
    // * A revision will be created for conflict documents
    // * When the parent document is deleted all its revisions will be removed.
    // * Revisions that exceed 45 days will be removed on next revision creation.
};

// Define the configure conflict revisions operation, pass the configuration
var configureConflictRevisionsOp = 
    new ConfigureRevisionsForConflictsOperation(documentStore.Database, conflictRevConfig);

// Execute the operation by passing it to Maintenance.Server.Send
// The existing conflict revisions configuration will be replaced by the configuration passed
documentStore.Maintenance.Server.Send(configureConflictRevisionsOp);
`}
</CodeBlock>
</TabItem>
<TabItem value="Async" label="Async">
<CodeBlock language="csharp">
{`// Define the settings that will apply for conflict revisions (for all collections)
var conflictRevConfig = new RevisionsCollectionConfiguration
{
    PurgeOnDelete = true,
    MinimumRevisionAgeToKeep = new TimeSpan(days: 45, 0, 0, 0)
    
    // With this configuration:
    // ------------------------
    // * A revision will be created for conflict documents
    // * When the parent document is deleted all its revisions will be removed.
    // * Revisions that exceed 45 days will be removed on next revision creation.
};

// Define the configure conflict revisions operation, pass the configuration
var configureConflictRevisionsOp = 
    new ConfigureRevisionsForConflictsOperation(documentStore.Database, conflictRevConfig);

// Execute the operation by passing it to Maintenance.Server.Send
// The existing conflict revisions configuration will be replaced by the configuration passed
await documentStore.Maintenance.Server.SendAsync(configureConflictRevisionsOp);
`}
</CodeBlock>
</TabItem>
</Tabs>



## Syntax 

<TabItem value="syntax_1" label="syntax_1">
<CodeBlock language="csharp">
{`public ConfigureRevisionsForConflictsOperation(string database, RevisionsCollectionConfiguration configuration)
`}
</CodeBlock>
</TabItem>

| Parameter | Type | Description |
| - | - | - |
| **database** | `string` | The name of the database whose conflict revisions you want to manage |
| **configuration** | `RevisionsCollectionConfiguration` | The conflict revisions configuration to apply |

<TabItem value="syntax_2" label="syntax_2">
<CodeBlock language="csharp">
{`public class RevisionsCollectionConfiguration
\{
    public long? MinimumRevisionsToKeep \{ get; set; \}
    public TimeSpan? MinimumRevisionAgeToKeep \{ get; set; \}
    public long? MaximumRevisionsToDeleteUponDocumentUpdate \{ get; set; \}
    public bool PurgeOnDelete \{ get; set; \}
    public bool Disabled \{ get; set; \}
\}
`}
</CodeBlock>
</TabItem>

* See properties explanation and default values [here](../../../../document-extensions/revisions/client-api/operations/configure-revisions.mdx#revisions-collection-configuration-object).



<Admonition type="info" title="Info">

#### Storage consideration 

Automatic creation of conflict revisions can help track document conflicts and understand their reasons.  
However, it can also lead to a significant increase in the database size if many conflicts occur unexpectedly.  

* Consider limiting the number of conflict revisions kept per document using:  
  `MinimumRevisionsToKeep` and/or `MinimumRevisionAgeToKeep`.  

* Revisions are purged upon [modification of their parent documents](../../../../document-extensions/revisions/overview.mdx#revisions-configuration-execution).  
  If you want to purge a large number of revisions at once, you can **cautiously** [enforce configuration](../../../../studio/database/settings/document-revisions.mdx#enforce-configuration).  

</Admonition>


</LanguageContent>
<LanguageContent language="nodejs">

<Admonition type="note" title="Note">

* By default, RavenDB creates **revisions for conflict documents** for all collections  
  when conflicts occur and when they are resolved.  

* Use `ConfigureRevisionsForConflictsOperation` to disable the feature or modify the configuration. 

* If you define [default configuration](../../../../studio/database/settings/document-revisions.mdx#define-default-configuration),  
  then these settings will **override** the conflict revisions configuration.  

* If you define any [collection-specific configuration](../../../../studio/database/settings/document-revisions.mdx#define-collection-specific-configuration),  
  then these settings will also **override** the conflict revisions configuration for that collection.  
   * E.g., if the conflict revisions configuration defines that revisions created for conflicting documents will not be purged, 
     but a collection-specific configuration defines an age limit for revisions,  
     revisions for conflicting documents of this collection that exceed this age will be purged.  

* In this page:  
  * [Configure revisions for conflicts - Example](../../../../document-extensions/revisions/client-api/operations/conflict-revisions-configuration.mdx#configure-revisions-for-conflicts---example)
  * [Syntax](../../../../document-extensions/revisions/client-api/operations/conflict-revisions-configuration.mdx#syntax)
  * [Storage consideration](../../../../document-extensions/revisions/client-api/operations/conflict-revisions-configuration.mdx#storage-consideration)
</Admonition>
## Configure revisions for conflicts - Example

<TabItem value="conflict_revisions_configuration" label="conflict_revisions_configuration">
<CodeBlock language="js">
{`// Define the settings that will apply for conflict revisions (for all collections)
const conflictRevConfig  = new RevisionsCollectionConfiguration();
conflictRevConfig.minimumRevisionAgeToKeep = TimeUtil.millisToTimeSpan(3600 * 1000 * 24 * 45) // 45 days
conflictRevConfig.purgeOnDelete = true;

// With this configuration:
// ------------------------
// * A revision will be created for conflict documents
// * When the parent document is deleted all its revisions will be removed.
// * Revisions that exceed 45 days will be removed on next revision creation.

// Define the configure conflict revisions operation, pass the configuration
const configureConflictRevisionsOp =
    new ConfigureRevisionsForConflictsOperation(documentStore.database, conflictRevConfig);

// Execute the operation by passing it to maintenance.server.send
// The existing conflict revisions configuration will be replaced by the configuration passed
await documentStore.maintenance.server.send(configureConflictRevisionsOp);
`}
</CodeBlock>
</TabItem>



## Syntax 

<TabItem value="syntax_1" label="syntax_1">
<CodeBlock language="js">
{`const configureRevisionsOp = new ConfigureRevisionsForConflictsOperation(database, configuration);
`}
</CodeBlock>
</TabItem>

| Parameter | Type | Description |
| - | - | - |
| **database** | `string` | The name of the database whose conflict revisions you want to manage |
| **configuration** | `RevisionsCollectionConfiguration` | The conflict revisions configuration to apply |

<TabItem value="syntax_2" label="syntax_2">
<CodeBlock language="js">
{`class RevisionsCollectionConfiguration
\{
    minimumRevisionsToKeep;
    minimumRevisionAgeToKeep;
    maximumRevisionsToDeleteUponDocumentUpdate;
    purgeOnDelete;
    disabled;
\}
`}
</CodeBlock>
</TabItem>

* See properties explanation and default values [here](../../../../document-extensions/revisions/client-api/operations/configure-revisions.mdx#revisions-collection-configuration-object).



<Admonition type="info" title="Info">

#### Storage consideration 

Automatic creation of conflict revisions can help track document conflicts and understand their reasons.  
However, it can also lead to a significant increase in the database size if many conflicts occur unexpectedly.  

* Consider limiting the number of conflict revisions kept per document using:  
  `minimumRevisionsToKeep` and/or `minimumRevisionAgeToKeep`.  

* Revisions are purged upon [modification of their parent documents](../../../../document-extensions/revisions/overview.mdx#revisions-configuration-execution).  
  If you want to purge a large number of revisions at once, you can **cautiously** [enforce configuration](../../../../studio/database/settings/document-revisions.mdx#enforce-configuration).  

</Admonition>


</LanguageContent>

<!---
### Client API
- [Operations: Configuring Revisions](../../../../document-extensions/revisions/client-api/operations/configure-revisions)
- [Revisions: API Overview](../../../../document-extensions/revisions/client-api/overview)
- [Session: Loading Revisions](../../../../document-extensions/revisions/client-api/session/loading)
- [Session: Including Revisions](../../../../document-extensions/revisions/client-api/session/including)
- [Session: Counting Revisions](../../../../document-extensions/revisions/client-api/session/counting)

### Document Extensions
- [Document Revisions Overview](../../../../document-extensions/revisions/overview)

### Studio
- [Conflicting Document Defaults](../../../../studio/database/settings/document-revisions#editing-the-conflicting-document-defaults)
- [Settings: Document Revisions](../../../../studio/database/settings/document-revisions)
- [Document Extensions: Revisions](../../../../studio/database/document-extensions/revisions)


-->